--- a/Src/iFramework.Plugins/IFramework.AspNet/IFramework.AspNet.csproj
+++ b/Src/iFramework.Plugins/IFramework.AspNet/IFramework.AspNet.csproj
@@ -4,10 +4,12 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <Authors>Ivan</Authors>
     <Company>Ivan</Company>
-    <Description>use  Exceptions.ErrorCode.NoError as ApiResult.ErrorCode default value</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/IvanZheng/IFramework</PackageProjectUrl>
-    <PackageReleaseNotes>Support ConcurrentProcess for unique constrain validation.</PackageReleaseNotes>
+    <PackageReleaseNotes>Enable SourceLink.</PackageReleaseNotes>
+	<PublishRepositoryUrl>true</PublishRepositoryUrl>
+	<IncludeSymbols>true</IncludeSymbols>
+	<SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netstandard2.0|AnyCPU'">
@@ -35,6 +37,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Json" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\iFramework\IFramework.csproj" />
