--- a/Src/iFramework.Plugins/EQueueBroker/EQueueBroker.csproj
+++ b/Src/iFramework.Plugins/EQueueBroker/EQueueBroker.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="ECommon.Log4Net" Version="2.5.3" />
     <PackageReference Include="EQueue" Version="2.6.2" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
+    <PackageReference Include="System.Text.Encodings.Web" Version="5.0.1" />
   </ItemGroup>
 
 
