--- a/Src/Sample/Sample.CommandServiceCore/Sample.CommandServiceCoreNet5.csproj
+++ b/Src/Sample/Sample.CommandServiceCore/Sample.CommandServiceCoreNet5.csproj
@@ -1,16 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 	  <ServerGarbageCollection>false</ServerGarbageCollection>
     <DockerfileContext>..\..</DockerfileContext>
+    <AssemblyName>Sample.CommandServiceCore</AssemblyName>
+    <RootNamespace>Sample.CommandServiceCore</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <WarningLevel>0</WarningLevel>
+    <WarningLevel>1</WarningLevel>
     <LangVersion>7.1</LangVersion>
+    <OutputPath></OutputPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -27,7 +30,7 @@
   <ItemGroup>
     <Compile Remove="CommandInputExtension\FormDataExtension.cs" />
     <Compile Remove="Controllers\ValuesController.cs" />
-    <Compile Remove="StartupNet5.cs" />
+    <Compile Remove="Startup.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -57,12 +60,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Log4Net.Async.Standard" Version="3.1.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.10" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
-    <PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.2.22" />
-    <PackageReference Include="MiniProfiler.EntityFrameworkCore" Version="4.2.22" />
-    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.0" />
+	  <PackageReference Include="Log4Net.Async.Standard" Version="3.1.0" />
+	  <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.7" />
+	  <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.7" />
+	  <PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.2.22" />
+	  <PackageReference Include="MiniProfiler.EntityFrameworkCore" Version="4.2.22" />
+	  <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.0" />
+	  <PackageReference Include="System.Text.Encodings.Web" Version="5.0.1" />
   </ItemGroup>
 
   <ItemGroup>
