update serilog settings

--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -58,7 +58,6 @@
     "DatabaseName": -1
   },
   "Logging": {
-    "IncludeScopes": true,
     "LogLevel": {
       "Default": "Warning",
       "System": "None",
@@ -83,7 +82,7 @@
                     {
                       "Name": "ByIncludingOnly",
                       "Args": {
-                        "expression": "@Level = 'Information' or @Level = 'Debug'"
+                        "expression": "@l = 'Information' or @l = 'Debug'"
                       }
                     }
                   ],
@@ -92,7 +91,7 @@
                       "Name": "File",
                       "Args": {
                         "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {SourceContext} [{Level:w3}] {Message} Scope: {Properties:j}{NewLine}{Exception}{NewLine}",
-                        "path": "log/sample_debug_.txt",
+                        "path": "log/debug_.txt",
                         "rollingInterval": "Day"
                       }
                     }
@@ -111,25 +110,14 @@
               "Name": "File",
               "Args": {
                 "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {SourceContext} [{Level:w3}] {Message} Scope: {Properties:j}{NewLine}{Exception}{NewLine}",
-                "path": "log/sample_error_.txt",
+                "path": "log/error_.txt",
                 "rollingInterval": "Day",
                 "restrictedToMinimumLevel": "Warning"
               }
             }
           ]
-        } 
+        }
       }
-      //{
-        //  "Name": "MSSqlServer",
-        //  "Args": {
-        //    "connectionString": "Server=(localdb)\\projects;Database=Ids.Application;Trusted_Connection=True;MultipleActiveResultSets=true",
-        //    "tableName": "Log",
-        //    "columnOptionsSection": {
-        //      "addStandardColumns": [ "LogEvent" ],
-        //      "removeStandardColumns": [ "Properties" ]
-        //    }
-        //  }
-        //}
     ]
   }
 }
