--- a/Src/version.props
+++ b/Src/version.props
@@ -1,6 +1,6 @@
 ﻿<Project>
   <PropertyGroup>
-    <VersionPrefix>3.2.5.5</VersionPrefix>
+    <VersionPrefix>5.0.0-preview007</VersionPrefix>
     <VersionSuffix></VersionSuffix>
     <PackageVersion Condition="'$(IsFinalBuild)' == 'true' AND '$(VersionSuffix)' == 'prerelease' ">$(VersionPrefix)</PackageVersion>
     <PackageVersion Condition="'$(IsFinalBuild)' == 'true' AND '$(VersionSuffix)' != 'prerelease' ">$(VersionPrefix)-$(VersionSuffix)-final</PackageVersion>
