--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -5,13 +5,8 @@
     "SampleModelContext.MongoDb": "mongodb://10.100.7.46:9007/SampleModelContext?maxPoolSize=2000&connectTimeoutMS=60000&serverSelectionTimeout=60000&socketTimeout=60000"
   },
   "KafkaClientOptions": {
-    "BrokerList": "devops.vorwerkchina.com:9092",
-    "Extensions": {
-      "security.protocol": "SaslPlaintext",
-      "sasl.mechanism": "Plain",
-      "sasl.username": "vorwerk",
-      "sasl.password": "vorwerk!@#"
-    }
+    "BrokerList": "devops.vorwerkchina.com:9092"
+    
   },
   "PathBase": "/core",
   "App": "CommandServiceCore",
