implement Aliyun logger

--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -1,11 +1,24 @@
 ﻿{
+  "AliyunLogOptions": {
+    "Endpoint": "cn-shanghai.log.aliyuncs.com",
+    "AccessKeyId": "LTAI5tQ913LDvSmnryvPQEXz",
+    "AccessKey": "Tjm8RX8rauXahMnROYfvPydfFhcKMW",
+    "Project": "vorwerk-api-gateway-test",
+    "LogStore": "eshop"
+  }, 
   "ConnectionStrings": {
     "SampleModelContext": "Server=(localdb)\\projects;Database=SampleModelContext.Core;Integrated Security=true;",
     "SampleModelContext.MySql": "server=127.0.0.1;Port=3306;uid=root;pwd=Password01!;database=SampleModelContext.Core",
     "SampleModelContext.MongoDb": "mongodb://10.100.7.46:9007/SampleModelContext?maxPoolSize=2000&connectTimeoutMS=60000&serverSelectionTimeout=60000&socketTimeout=60000"
   },
   "KafkaClientOptions": {
-    
+    "BrokerList": "devops.vorwerkchina.com:9092",
+    "Extensions": {
+      "security.protocol": "sasl_plaintext",
+      "sasl.mechanism": "PLAIN",
+      "sasl.username": "vorwerk",
+      "sasl.password": "vorwerk!@#"
+    }
   },
   "PathBase": "/core",
   "App": "CommandServiceCore",
