--- a/Src/iFramework.Plugins/IFramework.Logging.Abastracts/IFramework.Logging.Abstracts.csproj
+++ b/Src/iFramework.Plugins/IFramework.Logging.Abastracts/IFramework.Logging.Abstracts.csproj
@@ -4,7 +4,9 @@
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<PublishRepositoryUrl>true</PublishRepositoryUrl>
 		<IncludeSymbols>true</IncludeSymbols>
-		<SymbolPackageFormat>snupkg</SymbolPackageFormat> 
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance> 
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="5.0.0" />
