--- a/Src/iFramework.Plugins/IFramework.Logging.Log4Net/IFramework.Logging.Log4Net.csproj
+++ b/Src/iFramework.Plugins/IFramework.Logging.Log4Net/IFramework.Logging.Log4Net.csproj
@@ -6,6 +6,7 @@
 	  <PackageReleaseNotes>Enable SourceLink.</PackageReleaseNotes>
 	  <PublishRepositoryUrl>true</PublishRepositoryUrl>
 	  <IncludeSymbols>true</IncludeSymbols>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
 	  <SymbolPackageFormat>snupkg</SymbolPackageFormat>      	
   </PropertyGroup>
 
