--- a/Src/iFramework.Plugins/IFramework.Logging.Abastracts/IFramework.Logging.Abstracts.csproj
+++ b/Src/iFramework.Plugins/IFramework.Logging.Abastracts/IFramework.Logging.Abstracts.csproj
@@ -6,7 +6,8 @@
 		<IncludeSymbols>true</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance> 
+		<EmbedUntrackedSources>true</EmbedUntrackedSources>
+		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="5.0.0" />
