--- a/Src/iFramework.Plugins/IFramework.Logging.AliyunLog/IFramework.Logging.AliyunLog.csproj
+++ b/Src/iFramework.Plugins/IFramework.Logging.AliyunLog/IFramework.Logging.AliyunLog.csproj
@@ -4,8 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
 	  <PublishRepositoryUrl>true</PublishRepositoryUrl>
 	  <IncludeSymbols>true</IncludeSymbols>
+	  <EmbedUntrackedSources>true</EmbedUntrackedSources>
 	  <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild> 
+	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="5.0.0" />
