--- a/Src/iFramework.Plugins/IFramework.Logging.AliyunLog/IFramework.Logging.AliyunLog.csproj
+++ b/Src/iFramework.Plugins/IFramework.Logging.AliyunLog/IFramework.Logging.AliyunLog.csproj
@@ -7,6 +7,7 @@
 	  <EmbedUntrackedSources>true</EmbedUntrackedSources>
 	  <SymbolPackageFormat>snupkg</SymbolPackageFormat>
 	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+	  <Version>3.2.7.1</Version>
   </PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="5.0.0" />
