--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -14,8 +14,8 @@
     "Extensions": {
       "security.protocol": "sasl_plaintext",
       "sasl.mechanism": "PLAIN",
-      "sasl.username": "", 
-      "sasl.password": ""
+      "sasl.username": "vorwerk",
+      "sasl.password": "vorwerk123!@#"
     }
   },
   "PathBase": "/core",
