--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -13,9 +13,7 @@
     "BrokerList": "devops.vorwerkchina.com:9092",
     "Extensions": {
       "security.protocol": "sasl_plaintext",
-      "sasl.mechanism": "PLAIN",
-      "sasl.username": "vorwerk",
-      "sasl.password": "vorwerk123!@#"
+      "sasl.mechanism": "PLAIN"
     }
   },
   "PathBase": "/core",
