--- a/Src/iFramework.Plugins/IFramework.MessageStores.Abstracts/IFramework.MessageStores.Abstracts.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageStores.Abstracts/IFramework.MessageStores.Abstracts.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFrameworks>netstandard2.1;net6.0</TargetFrameworks>
     <Authors>Ivan</Authors>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	  <PackageReleaseNotes>Enable SourceLink.</PackageReleaseNotes>
@@ -9,11 +9,17 @@
 	  <IncludeSymbols>true</IncludeSymbols>
 	  <SymbolPackageFormat>snupkg</SymbolPackageFormat>      	
   </PropertyGroup>
+  <ItemGroup Condition="$(TargetFramework) == 'netstandard2.1'">
+		  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.12" />
+		  <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.12" />
+	  </ItemGroup>
 
+	  <ItemGroup Condition="$(TargetFramework) == 'net6.0'">
+		  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0" />
+		  <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.0" />
+	  </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.7" />
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
