update nuget version

--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -3,7 +3,7 @@
     "Endpoint": "cn-shanghai.log.aliyuncs.com",
     "Project": "vorwerk-api-gateway-test",
     "LogStore": "eshop"
-  }, 
+  },
   "ConnectionStrings": {
     "SampleModelContext": "Server=(localdb)\\projects;Database=SampleModelContext.Core;Integrated Security=true;",
     "SampleModelContext.MySql": "server=127.0.0.1;Port=3306;uid=root;pwd=Password01!;database=SampleModelContext.Core",
@@ -14,7 +14,9 @@
     "BrokerList": "devops.vorwerkchina.com:9092",
     "Extensions": {
       "security.protocol": "sasl_plaintext",
-      "sasl.mechanism": "PLAIN"
+      "sasl.mechanism": "PLAIN",
+      "sasl.username": "",
+      "sasl.password": ""
     }
   },
   "PathBase": "/core",
