add required attribute for sagainfo

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ obj
 /Src/iFramework.Plugins/EQueue.AdminWeb/logs
 /Src/Sample/Sample.CommandServiceCore/Properties/PublishProfiles/10.100.7.46.pubxml
 /Src/ConsoleApp/Properties/PublishProfiles/linux.pubxml
+/Src/publish
