--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -104,7 +104,9 @@
                       "Args": {
                         "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {SourceContext} [{Level:w3}] {Message} Scope: {Properties:j}{NewLine}{Exception}{NewLine}",
                         "path": "log/debug_.txt",
-                        "rollingInterval": "Day"
+                        "rollingInterval": "Day",
+                        "rollOnFileSizeLimit": true,
+                        "fileSizeLimitBytes": 209715200
                       }
                     }
                   ]
@@ -124,7 +126,9 @@
                 "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {SourceContext} [{Level:w3}] {Message} Scope: {Properties:j}{NewLine}{Exception}{NewLine}",
                 "path": "log/error_.txt",
                 "rollingInterval": "Day",
-                "restrictedToMinimumLevel": "Warning"
+                "restrictedToMinimumLevel": "Warning",
+                "rollOnFileSizeLimit": true,
+                "fileSizeLimitBytes": 209715200
               }
             }
           ]
